[gd_scene load_steps=11 format=3 uid="uid://bp45rocdgyvbp"]

[ext_resource type="Script" path="res://scenes/inventory/ground_item.gd" id="1_gjxl0"]
[ext_resource type="Script" path="res://addons/SwiftInv/Scripts/InventoryItem.gd" id="2_mflm6"]
[ext_resource type="Shader" path="res://scenes/inventory/ground_item.gdshader" id="3_g7caf"]
[ext_resource type="FontFile" uid="uid://ciu1c0knpjeq" path="res://assets/fonts/kenney_kenney-fonts/Fonts/Kenney Mini Square.ttf" id="4_83bpg"]

[sub_resource type="Gradient" id="Gradient_k8dnl"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_meho2"]
gradient = SubResource("Gradient_k8dnl")

[sub_resource type="Resource" id="Resource_1vacf"]
script = ExtResource("2_mflm6")
name = "GroundItem"
description = ""
texture = SubResource("GradientTexture2D_meho2")
value = 1
amount = 1
max_stack = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx51d"]
size = Vector2(24, 24)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jwet5"]
shader = ExtResource("3_g7caf")
shader_parameter/size_effect = 0.2
shader_parameter/speed = 1.5
shader_parameter/highlight_strength = 1.0
shader_parameter/color_mode_toggle = false
shader_parameter/is_horizontal = true
shader_parameter/pause_duration = 0.5

[sub_resource type="LabelSettings" id="LabelSettings_nw740"]
font = ExtResource("4_83bpg")
font_size = 18
outline_size = 3
outline_color = Color(0, 0.830839, 0.176342, 1)

[node name="GroundItem" type="Area2D"]
z_as_relative = false
texture_filter = 1
script = ExtResource("1_gjxl0")
item_resource = SubResource("Resource_1vacf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yx51d")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_jwet5")
use_parent_material = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -20.0
offset_top = -21.0
offset_right = 20.0
offset_bottom = -4.0

[node name="ItemLabel" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.00001
offset_top = -7.0
offset_right = 125.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.215, 0.215)
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Press E to pickup
"
label_settings = SubResource("LabelSettings_nw740")
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -14.0
offset_right = 125.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.215, 0.215)
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Name"
label_settings = SubResource("LabelSettings_nw740")
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
